syntax = "proto3";

package resumeadvisor;

option go_package = "github.com/Sharooq-Ebrahim/ResumeAdvisor-gRPC/proto;resumeadvisor";


service ResumeService {
  rpc GetFeedback(ResumeRequest) returns (ResumeFeedback);
  rpc GetDetailedFeedback(ResumeRequest) returns (stream ResumeFeedback);
}

message ResumeRequest {
  string username = 1;
  string resumetext = 2;
}

message ResumeFeedback {
  repeated string suggestions = 1;
}
